@@ -729,9 +729,9 @@
           <name>Adept: 2 free levels of Improved Potential</name>
           <bonus>
             <selectpowers>
-            <selectpower limittopowers="Improved Potential (Social),Improved Potential (Physical),Improved Potential (Mental)">
-              <val>1</val>
-            </selectpower>
+              <selectpower limittopowers="Improved Potential (Social),Improved Potential (Physical),Improved Potential (Mental)">
+                <val>1</val>
+              </selectpower>
             </selectpowers>
             <specificpower>Improved Potential (Chaos Mentor)</specificpower>
           </bonus>
